...
                  ),
            ),
          ),
        ],
      ),
      body: _screens[_selectedIndex],
      bottomNavigationBar: BottomNavigationBar(key: const Key('BottomNavigationBar'),
        currentIndex: _selectedIndex,
        selectedItemColor: AppColors.oliveGreen,
        showSelectedLabels: true,
        type: BottomNavigationBarType.fixed,
        selectedLabelStyle: mTextStyle14(
          mFontWeight: FontWeight.bold,
...
